Render the input correctly on Safari

--- a/apps/desktop/styles/globals.css
+++ b/apps/desktop/styles/globals.css
@@ -38,7 +38,9 @@ html, body {
 }
 
 .system-text-input {
+  -webkit-appearance: none;
   outline: none;
+  border-radius: 0;
   padding: 4px 5px;
   box-shadow: inset -1px -1px #fff,inset 1px 1px grey,inset -1px -1px #dfdfdf,inset 1px 1px #0a0a0a;
   background-color: #fff;
